# producer-consumer-rust

./: Cargo.toml  LICENSE  Makefile  README.md
benches/: spsc_mpsc_event_counters.rs
src/: crossbeam_demo.rs  disruptor_demo.rs  event.rs  lib.rs  main.rs  std_demo.rs
