[package]
name = "producer_consumer_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "std_demo"
path = "src/std_demo.rs"

[[bin]]
name = "crossbeam_demo"
path = "src/crossbeam_demo.rs"

[[bin]]
name = "disruptor_demo"
path = "src/disruptor_demo.rs"

[dependencies]
crossbeam = "0.8.4"
disruptor = "1.1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "spsc_mpsc_event_counters"
harness = false
