[package]
name = "producer_consumer_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "producer_consumer_rust"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
crossbeam = "0.8.4"
disruptor = "1.1.0"
clap = "4.5.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "spsc_mpsc_event_counters"
harness = false
